--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="./src/index.css">
+    <link rel="stylesheet" href="./src/components/body-comp.css">
+
     <title>Jon Forney: In Techno-Website</title>
 </head>
 <body>
